--- a/styles.css
+++ b/styles.css
@@ -75,7 +75,7 @@ body {
 
 .one__title {
   font: 30px/29px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
-  color: #FFF;
+  color: #fff;
   margin: 0 75% 15px 60px;
   padding-top: 90px;
 }
@@ -131,7 +131,7 @@ body {
   top: 2px;
   right: -1px;
   background-color: #fff;
-  box-shadow: 0 3px 5px rgba(0, 0, 0, .2);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
   transform: rotate(-45deg);
 }
 
