--- a/styles.css
+++ b/styles.css
@@ -8,16 +8,17 @@ body {
 }
 
 .header {
-  margin-bottom: 22px;
+  margin-bottom: 27px;
   display: flex;
 }
 
 .logo {
-  padding: 32px 28px 0 0;
-}
-
-.logo-img_two {
-  display: none;
+  display: block;
+  background: url(img/Axion-logo.svg);
+  background-repeat: no-repeat;
+  width: 55px;
+  height: 55px;
+  margin: 32px 28px 0 0;
 }
 
 #menu__toggle {
@@ -44,17 +45,23 @@ body {
 
 .menu__item_news,
 .menu__item_team,
-.menu__item_legacy,
-.menu__item_sing {
+.menu__item_legacy{
   padding-right: 35px;
+}
+
+.menu__item_sing {
+  padding-right: 34px;
 }
 
 .menu__item_help {
   padding-right: 190px;
 }
+
 .menu__item_search {
-  padding-right: 36px;
+  padding-right: 33px;
   padding-top: 5px;
+  padding-left: 5px;
+  width: 178px;
 }
 
 .menu__item_img {
@@ -62,8 +69,8 @@ body {
   padding-bottom: 2px;
 }
 
-.menu__item_lypa{
-  margin-left: -12px;
+.menu__item_lypa {
+  margin-left: -14px;
 }
 
 .menu__item_cart {
@@ -74,6 +81,7 @@ body {
   border: none;
   outline: none;
   border-bottom: solid 1px #000;
+  padding-right: 1px;
 }
 
 .one {
@@ -165,7 +173,7 @@ body {
   }
 }
 
-/*.product__title {
+/* .product__title {
   text-align: center;
   font: 22px/21px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   margin-bottom: 20px;
@@ -535,11 +543,12 @@ footer {
   }
 
   .logo {
-    padding: 32px 20px 0 4px;
+    background: url(img/Axion-logo-1024.svg);
+    margin: 32px 24px 0 1px;
   }
 
   .menu {
-    padding-top: 27px;
+    padding-top: 25px;
   }
 
   .menu__item {
@@ -551,16 +560,21 @@ footer {
   }
 
   .menu__item_help {
-    padding-right: 141px;
+    padding-right: 137px;
   }
 
   .menu__item_search {
-    padding-right: 27px;
+    padding-right: 12px;
+    padding-top: 8px;
   }
 
   .menu__item_search-1 {
     width: 160px;
   }
+
+  .menu__item_lypa {
+    margin-left: -19px;
+}
 
   .menu__item_sing {
     padding-right: 27px;
@@ -568,10 +582,11 @@ footer {
 
   .menu__item_img {
     padding-right: 25px;
+    padding-top: 2px;
   }
 
   .header {
-    margin-bottom: 35px;
+    margin-bottom: 42px;
   }
 
   .one {
@@ -580,7 +595,7 @@ footer {
   }
 
   .one__title {
-    margin: 0 75% 10px 55px;
+    margin: 0 75% 8px 55px;
     padding-top: 78px;
   }
 
@@ -589,6 +604,7 @@ footer {
     margin-right: 16px;
     font: 12px/11.5px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
   }
+
 /*
   .product-card__img-1,
   .product-card__img-2,
@@ -791,7 +807,7 @@ footer {
     width: 100%;
     height: 100%;
     margin: 0;
-    padding: 73px 0;
+    padding: 23px 0;
     list-style: none;
     text-align: center;
     background-color: #fff;
@@ -799,10 +815,10 @@ footer {
 
   .menu__item {
     display: block;
-    padding: 12px 14px;
+    padding: 10px 14px;
     margin: 0;
     color: #000;
-    font:  30px/29px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
+    font: 20px/19px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
   }
 
   #menu__toggle:checked ~ .menu__btn > span {
@@ -813,6 +829,7 @@ footer {
     top: 0;
     transform: rotate(90deg);
   }
+
   #menu__toggle:checked ~ .menu {
     visibility: visible;
     left: 0;
