--- a/styles.css
+++ b/styles.css
@@ -754,7 +754,7 @@ footer {
   }
 
   .header {
-    margin-bottom: 0px;
+    margin-bottom: 35px;
   }
 
   .logo-img_one {
@@ -765,10 +765,10 @@ footer {
     display: block;
     background: url(img/Axion-logo-768.svg);
     background-repeat: no-repeat;
-    background-size: 86%;
+    background-size: 100%;
     height: 40px;
     width: 160px;
-    margin-top: 41px;
+    margin-top: 42px;
     margin-left: 43px;
   }
 
@@ -805,7 +805,7 @@ footer {
     visibility: hidden;
     top: 0;
     width: 100%;
-    height: 100%;
+    height: 50%;
     margin: 0;
     padding: 23px 0;
     list-style: none;
@@ -845,7 +845,7 @@ footer {
   }
 
   .one__title {
-    margin: 0 75% 50px 45px;
+    margin: 0 75% 47px 45px;
     padding-top: 119px;
     font: 50px/48px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   }
@@ -944,12 +944,21 @@ footer {
 }
 
 @media (max-width: 375px) {
+  .header {
+    margin-bottom: 26px;
+  }
+
   .logo {
-    background-size: 83%;
-    height: 18px;
+    background-size: 100%;
+    height: 25px;
     width: 104px;
     margin-top: 23px;
-    margin-left: 48px;
+    margin-left: 49px;
+  }
+
+  .menu {
+    width: 60%;
+    height: 30%;
   }
 
   .menu__btn {
@@ -976,7 +985,7 @@ footer {
   }
 
   .one__title {
-    margin: 0 75% 20px 48px;
+    margin: 0 75% 19px 48px;
     padding-top: 63px;
     font: 20px/19px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   }
@@ -1012,6 +1021,11 @@ footer {
   .logo {
     margin-top: 23px;
     margin-left: 20px;
+  }
+
+  .menu {
+    width: 50%;
+    height: 30%;
   }
 
   .menu__btn {
