--- a/styles.css
+++ b/styles.css
@@ -25,63 +25,70 @@ body {
   opacity: 0;
 }
 
-.menu {
+.menu,
+.menu-left,
+.menu-right {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 28px;
 }
 
-.menu__item {
+.menu-left {
+  margin: 28px 24% 0 1px;
+}
+
+.menu-right {
+  margin: 28px 0 0 1px;
+}
+
+.menu-left__item,
+.menu-right__item {
   font: 12px/12px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   color: #000;
   text-decoration: none;
 }
 
-.menu__item_shop {
+.menu-left__item_shop {
   padding-left: 17px;
   padding-right: 35px;
 }
 
-.menu__item_news,
-.menu__item_team,
-.menu__item_legacy{
+.menu-left__item_news,
+.menu-left__item_team,
+.menu-left__item_legacy{
   padding-right: 35px;
 }
 
-.menu__item_sing {
+.menu-right__item_sing {
   padding-right: 34px;
+  width: 50px;
 }
 
-.menu__item_help {
-  padding-right: 190px;
-}
-
-.menu__item_search {
-  padding-right: 33px;
+.menu-right__item_search {
+  padding-right: 25px;
   padding-top: 5px;
   padding-left: 5px;
-  width: 178px;
+  width: 189px;
 }
 
-.menu__item_img {
+.menu-right__item_img {
   padding-right: 35px;
   padding-bottom: 2px;
 }
 
-.menu__item_lypa {
-  margin-left: -14px;
+.menu-right__item_lypa {
+  margin-left: -18px;
 }
 
-.menu__item_cart {
+.menu-right__item_cart {
   padding-right: 4px;
 }
 
-.menu__item_search-1 {
+.menu-right__item_search-1 {
   border: none;
   outline: none;
   border-bottom: solid 1px #000;
-  padding-right: 1px;
+  padding-right: 8px;
 }
 
 .one {
@@ -537,6 +544,75 @@ footer {
   opacity: 0.5;
 }
 
+@media (max-width: 1240px) {
+  .menu-left {
+    margin-right: 32%;
+  }
+}
+
+@media (max-width: 1230px) {
+  .menu-left {
+    margin-right: 28%;
+  }
+  .logo {
+    margin-left: 8px;
+  }
+}
+
+@media (max-width: 1169px) {
+  .menu-left {
+    margin-right: 22%;
+  }
+}
+
+@media (max-width: 1159px) {
+  .menu-left {
+    margin-right: 20%;
+  }
+}
+
+@media (max-width: 1139px) {
+  .menu-left {
+    margin-right: 18%;
+  }
+}
+
+@media (max-width: 1119px) {
+  .menu-left {
+    margin-right: 16%;
+  }
+}
+
+@media (max-width: 1090px) {
+  .menu-left {
+    margin-right: 14%;
+  }
+}
+
+@media (max-width: 1070px) {
+  .menu-left {
+    margin-right: 10%;
+  }
+  .logo {
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 1050px) {
+  .menu-left {
+    margin-right: 8%;
+  }
+}
+
+@media (max-width: 1040px) {
+  .menu-left {
+    margin-right: 6%;
+  }
+  .logo {
+    margin-left: 12px;
+  }
+}
+
 @media (max-width: 1024px) {
   .wrapper {
     width: 91%;
@@ -544,43 +620,42 @@ footer {
 
   .logo {
     background: url(img/Axion-logo-1024.svg);
-    margin: 32px 24px 0 1px;
+    background-repeat: no-repeat;
+    width: 66px;
+    margin: 32px 11px 0 1px;
   }
 
-  .menu {
-    padding-top: 25px;
+  .menu-left {
+    margin: 24px 18% 0 1px;
+  }
+
+  .menu-right {
+    margin: 25px 0 0 1px;
   }
 
   .menu__item {
     font: 12px/11.5px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   }
 
-  .menu__item_shop {
+  .menu-left__item_shop {
     padding-left: 12px;
   }
 
-  .menu__item_help {
-    padding-right: 137px;
+  .menu-right__item_search {
+    padding: 8px 7px 0 10px;
+    width: 185px;
   }
 
-  .menu__item_search {
-    padding-right: 12px;
-    padding-top: 8px;
-  }
-
-  .menu__item_search-1 {
+  .menu-right__item_search-1 {
     width: 160px;
   }
 
-  .menu__item_lypa {
-    margin-left: -19px;
-}
-
-  .menu__item_sing {
-    padding-right: 27px;
+  .menu-right__item_sing {
+    padding-right: 25px;
+    width: 50px;
   }
 
-  .menu__item_img {
+  .menu-right__item_img {
     padding-right: 25px;
     padding-top: 2px;
   }
@@ -747,31 +822,59 @@ footer {
   }
 */
 }
-
-@media (max-width: 768px) {
-  .wrapper {
-    width: 100%;
+@media (max-width: 1020px) {
+  .menu-left {
+    margin-right: 16%;
   }
+}
 
-  .header {
-    margin-bottom: 35px;
+@media (max-width: 1000px) {
+  .menu-left {
+    margin-right: 12%;
   }
-
-  .logo-img_one {
-    display: none;
-  }
-
   .logo {
-    display: block;
-    background: url(img/Axion-logo-768.svg);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    height: 40px;
-    width: 160px;
-    margin-top: 42px;
-    margin-left: 43px;
+    margin-left: 10px;
+  }
+}
+
+@media (max-width: 980px) {
+  .menu-left {
+    margin-right: 10%;
+  }
+}
+
+@media (max-width: 960px) {
+  .menu-left {
+    margin-right: 6%;
+  }
+}
+
+@media (max-width: 930px) {
+  .menu-left {
+    margin-right: 2%;
+  }
+}
+
+@media (max-width: 900px) {
+  .menu-left__item,
+  .menu-right__item {
+    font: 11px/9px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   }
 
+  .menu-right__item_search-1 {
+    width: 100px;
+  }
+
+  .menu-right__item_search {
+    width: 105px;
+    padding-right: 30px;
+  }
+
+  .menu-left {
+    margin-right: 12%;
+  }
+
+@media (max-width: 777px) {
   .menu__btn {
     display: flex;
     align-items: center;
@@ -813,7 +916,16 @@ footer {
     background-color: #fff;
   }
 
-  .menu__item {
+  .menu-left,
+  .menu-right {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin: 0;
+  }
+
+  .menu-left__item,
+  .menu-right__item {
     display: block;
     padding: 10px 14px;
     margin: 0;
@@ -833,6 +945,34 @@ footer {
   #menu__toggle:checked ~ .menu {
     visibility: visible;
     left: 0;
+  }
+
+  .logo-img_one {
+    display: none;
+  }
+
+  .logo {
+    display: block;
+    background: url(img/Axion-logo-768.svg);
+    background-repeat: no-repeat;
+    height: 40px;
+    width: 160px;
+    margin-top: 42px;
+    margin-left: 8px;
+  }
+}
+
+@media (max-width: 768px) {
+  .wrapper {
+    width: 100%;
+  }
+
+  .header {
+    margin-bottom: 33px;
+  }
+
+  .logo {
+    margin-left: 42px;
   }
 
   .one {
@@ -962,7 +1102,7 @@ footer {
   }
 
   .menu__btn {
-    top: 34px;
+    top: 33px;
     right: 315px;
     width: 41px;
     height: 16px;
