--- a/styles.css
+++ b/styles.css
@@ -544,6 +544,12 @@ footer {
   opacity: 0.5;
 }
 
+@media (max-width: 1250px) {
+  .menu-left {
+    margin-right: 30%;
+  }
+}
+
 @media (max-width: 1240px) {
   .menu-left {
     margin-right: 32%;
@@ -556,6 +562,15 @@ footer {
   }
   .logo {
     margin-left: 8px;
+  }
+}
+
+@media (max-width: 1180px) {
+  .logo {
+    margin-left: 1px;
+  }
+  .menu-left {
+    margin: 28px 24% 0 1px;
   }
 }
 
@@ -585,7 +600,7 @@ footer {
 
 @media (max-width: 1090px) {
   .menu-left {
-    margin-right: 14%;
+    margin-right: 12%;
   }
 }
 
@@ -908,7 +923,7 @@ footer {
     visibility: hidden;
     top: 0;
     width: 100%;
-    height: 50%;
+    height: 60%;
     margin: 0;
     padding: 23px 0;
     list-style: none;
@@ -929,9 +944,22 @@ footer {
     display: block;
     padding: 10px 14px;
     margin: 0;
+    padding: 20px 0;
     color: #000;
-    font: 20px/19px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
+    font: 30px/29px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
   }
+
+  .menu-right__item_sing  {
+    width: 190px;
+  }
+
+  .menu-right__item_img,
+  .menu-right__item_flag,
+  .menu-right__item_search {
+    display: none;
+  }
+
+
 
   #menu__toggle:checked ~ .menu__btn > span {
     transform: rotate(45deg);
@@ -973,6 +1001,10 @@ footer {
 
   .logo {
     margin-left: 42px;
+  }
+
+  .menu {
+    height: 60%;
   }
 
   .one {
