--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@ body {
 .header {
   margin-bottom: 27px;
   display: flex;
+  justify-content: space-between;
 }
 
 .logo {
@@ -25,70 +26,72 @@ body {
   opacity: 0;
 }
 
-.menu,
-.menu-left,
-.menu-right {
+.menu {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  padding-top: 27px;
 }
 
-.menu-left {
-  margin: 28px 24% 0 1px;
-}
-
-.menu-right {
-  margin: 28px 0 0 1px;
-}
-
-.menu-left__item,
-.menu-right__item {
+.menu__item {
   font: 12px/12px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   color: #000;
   text-decoration: none;
 }
 
-.menu-left__item_shop {
+.menu__item_flag {
   padding-left: 17px;
-  padding-right: 35px;
 }
 
-.menu-left__item_news,
-.menu-left__item_team,
-.menu-left__item_legacy {
-  padding-right: 35px;
+.menu__item_img {
+  padding-right: 17px;
+  padding-left: 1px;
 }
 
-.menu-right__item_sing {
-  padding-right: 34px;
-  width: 50px;
+.menu__item_cart {
+  padding-right: 3px;
+  padding-left: 17px;
 }
 
-.menu-right__item_search {
-  padding-right: 25px;
-  padding-top: 5px;
-  padding-left: 5px;
-  width: 189px;
+.menu__item_sing {
+  padding: 0 18px;
 }
 
-.menu-right__item_img {
-  padding-right: 35px;
-  padding-bottom: 2px;
+.menu__item_lypa {
+  padding-left: 1px;
+  margin-left: -15px;
 }
 
-.menu-right__item_lypa {
-  margin-left: -18px;
-}
-
-.menu-right__item_cart {
-  padding-right: 4px;
-}
-
-.menu-right__item_search-1 {
+.menu__item_search-1 {
   border: none;
   outline: none;
   border-bottom: solid 1px #000;
-  padding-right: 8px;
+}
+
+.menu__item_search {
+  padding-left: 96px;
+  padding-right: 18px;
+  padding-top: 3px;
+}
+
+.menu__item_help {
+  padding-right: 96px;
+  padding-left: 16px;
+}
+
+.menu__item_legacy {
+  padding: 0 18px;
+}
+
+.menu__item_team {
+  padding: 0 18px;
+}
+
+.menu__item_news {
+  padding: 0 18px;
+}
+
+.menu__item_shop {
+  padding: 0 16px;
 }
 
 .one {
@@ -544,97 +547,79 @@ footer {
   opacity: 0.5;
 }
 
-@media (max-width: 1250px) {
-  .menu-left {
-    margin-right: 30%;
-  }
-}
-
-@media (max-width: 1240px) {
-  .menu-left {
-    margin-right: 32%;
-  }
-}
-
-@media (max-width: 1230px) {
-  .menu-left {
-    margin-right: 28%;
-  }
-
-  .logo {
-    margin-left: 8px;
-  }
-}
-
-@media (max-width: 1180px) {
-  .logo {
-    margin-left: 1px;
-  }
-
-  .menu-left {
-    margin: 28px 24% 0 1px;
-  }
-}
-
 @media (max-width: 1169px) {
-  .menu-left {
-    margin-right: 22%;
+  .menu__item_help {
+    padding-right: 85px;
   }
+
+  .menu__item_search {
+    padding-left: 85px;
+  }
+
 }
 
-@media (max-width: 1159px) {
-  .menu-left {
-    margin-right: 20%;
+@media (max-width: 1140px) {
+  .menu__item_help {
+    padding-right: 75px;
   }
+
+  .menu__item_search {
+    padding-left: 75px;
+  }
+
 }
 
-@media (max-width: 1139px) {
-  .menu-left {
-    margin-right: 18%;
+@media (max-width: 1120px) {
+  .menu__item_help {
+    padding-right: 65px;
   }
+
+  .menu__item_search {
+    padding-left: 65px;
+  }
+
 }
 
-@media (max-width: 1119px) {
-  .menu-left {
-    margin-right: 16%;
+@media (max-width: 1100px) {
+  .menu__item_help {
+    padding-right: 55px;
   }
+
+  .menu__item_search {
+    padding-left: 55px;
+  }
+
 }
 
-@media (max-width: 1090px) {
-  .menu-left {
-    margin-right: 12%;
-  }
-}
-
-@media (max-width: 1070px) {
-  .menu-left {
-    margin-right: 10%;
+@media (max-width: 1080px) {
+  .menu__item_help {
+    padding-right: 35px;
   }
 
-  .logo {
-    margin-left: 10px;
+  .menu__item_search {
+    padding-left: 35px;
   }
-}
 
-@media (max-width: 1050px) {
-  .menu-left {
-    margin-right: 8%;
-  }
 }
 
 @media (max-width: 1040px) {
-  .menu-left {
-    margin-right: 6%;
+  .menu__item_help {
+    padding-right: 15px;
   }
 
-  .logo {
-    margin-left: 12px;
+  .menu__item_search {
+    padding-left: 15px;
   }
+
 }
 
 @media (max-width: 1024px) {
   .wrapper {
     width: 91%;
+  }
+
+  .header {
+    margin-bottom: 40px;
   }
 
   .logo {
@@ -644,43 +629,51 @@ footer {
     margin: 32px 11px 0 1px;
   }
 
-  .menu-left {
-    margin: 24px 18% 0 1px;
-  }
-
-  .menu-right {
-    margin: 25px 0 0 1px;
-  }
-
   .menu__item {
     font: 12px/11.5px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   }
 
-  .menu-left__item_shop {
+  .menu__item_flag {
     padding-left: 12px;
   }
 
-  .menu-right__item_search {
-    padding: 8px 7px 0 10px;
-    width: 185px;
+  .menu__item_img {
+    padding-right: 12px;
   }
 
-  .menu-right__item_search-1 {
+  .menu__item_cart {
+    padding-left: 12px;
+  }
+
+  .menu__item_sing {
+    padding: 0 15px;
+  }
+
+  .menu__item_search-1 {
     width: 160px;
   }
 
-  .menu-right__item_sing {
-    padding-right: 25px;
-    width: 50px;
+  .menu__item_search {
+    padding-left: 68px;
+    padding-top: 5px;
   }
 
-  .menu-right__item_img {
-    padding-right: 25px;
-    padding-top: 2px;
+  .menu__item_help {
+    padding-right: 68px;
+    padding-left: 15px;
   }
 
-  .header {
-    margin-bottom: 42px;
+  .menu__item_legacy {
+    padding: 0 20px;
+  }
+
+  .menu__item_news {
+    padding: 0 15px;
+  }
+
+  .menu__item_shop {
+    padding-right: 19px;
+    padding-left: 12px;
   }
 
   .one {
@@ -689,7 +682,7 @@ footer {
   }
 
   .one__title {
-    margin: 0 75% 8px 55px;
+    margin: 0 75% 10px 55px;
     padding-top: 78px;
   }
 
@@ -843,56 +836,78 @@ footer {
 }
 
 @media (max-width: 1020px) {
-  .menu-left {
-    margin-right: 16%;
+  .menu__item_help {
+    padding-right: 60px;
   }
+
+  .menu__item_search {
+    padding-left: 60px;
+  }
+
 }
 
 @media (max-width: 1000px) {
-  .menu-left {
-    margin-right: 12%;
+  .menu__item_help {
+    padding-right: 50px;
   }
-  .logo {
-    margin-left: 10px;
+
+  .menu__item_search {
+    padding-left: 50px;
   }
+
 }
 
 @media (max-width: 980px) {
-  .menu-left {
-    margin-right: 10%;
-  }
-}
-
-@media (max-width: 960px) {
-  .menu-left {
-    margin-right: 6%;
-  }
-}
-
-@media (max-width: 930px) {
-  .menu-left {
-    margin-right: 2%;
-  }
-}
-
-@media (max-width: 900px) {
-  .menu-left__item,
-  .menu-right__item {
-    font: 11px/9px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
-  }
-
-  .menu-right__item_search-1 {
-    width: 100px;
-  }
-
-  .menu-right__item_search {
-    width: 105px;
+  .menu__item_help {
     padding-right: 30px;
   }
 
-  .menu-left {
-    margin-right: 12%;
+  .menu__item_search {
+    padding-left: 30px;
   }
+
+}
+
+@media (max-width: 930px) {
+  .menu__item_help {
+    padding-right: 10px;
+  }
+
+  .menu__item_search {
+    padding-left: 10px;
+  }
+
+}
+
+@media (max-width: 900px) {
+  .menu__item {
+    font: 11px/9px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
+  }
+
+  .menu__item_search-1 {
+    width: 100px;
+  }
+
+  .menu__item_help {
+    padding-right: 20px;
+  }
+
+  .menu__item_search {
+    padding-left: 20px;
+  }
+
+}
+
+@media (max-width: 850px) {
+  .menu__item_help {
+    padding-right: 5px;
+  }
+
+  .menu__item_search {
+    padding-left: 5px;
+  }
+
+
 }
 
 @media (max-width: 777px) {
@@ -926,6 +941,7 @@ footer {
     display: flex;
     flex-direction: column;
     position: fixed;
+    text-align: center;
     visibility: hidden;
     top: 0;
     width: 100%;
@@ -937,16 +953,7 @@ footer {
     background-color: #fff;
   }
 
-  .menu-left,
-  .menu-right {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    margin: 0;
-  }
-
-  .menu-left__item,
-  .menu-right__item {
+  .menu__item {
     display: block;
     padding: 20px 14px;
     margin: 0;
@@ -954,13 +961,13 @@ footer {
     font: 30px/29px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
   }
 
-  .menu-right__item_sing {
+  /*.menu__item_sing {
     width: 190px;
-  }
+  }*/
 
-  .menu-right__item_img,
-  .menu-right__item_flag,
-  .menu-right__item_search {
+  .menu__item_img,
+  .menu__item_flag,
+  .menu__item_search {
     display: none;
   }
 
@@ -1009,7 +1016,7 @@ footer {
   }
 
   .menu {
-    height: 60%;
+    height: 70%;
   }
 
   .one {
