--- a/styles.css
+++ b/styles.css
@@ -618,8 +618,12 @@ footer {
     width: 91%;
   }
 
+  .menu {
+    padding-top: 26px;
+  }
+
   .header {
-    margin-bottom: 40px;
+    margin-bottom: 41px;
   }
 
   .logo {
@@ -638,7 +642,7 @@ footer {
   }
 
   .menu__item_img {
-    padding-right: 12px;
+    padding-right: 13px;
   }
 
   .menu__item_cart {
@@ -659,7 +663,7 @@ footer {
   }
 
   .menu__item_help {
-    padding-right: 68px;
+    padding-right: 69px;
     padding-left: 15px;
   }
 
@@ -667,12 +671,16 @@ footer {
     padding: 0 20px;
   }
 
-  .menu__item_news {
+  .menu__item_team {
     padding: 0 15px;
   }
 
+  .menu__item_news {
+    padding: 0 20px;
+  }
+
   .menu__item_shop {
-    padding-right: 19px;
+    padding-right: 15px;
     padding-left: 12px;
   }
 
@@ -683,7 +691,7 @@ footer {
 
   .one__title {
     margin: 0 75% 10px 55px;
-    padding-top: 78px;
+    padding-top: 76px;
   }
 
   .one__button {
@@ -1008,7 +1016,7 @@ footer {
   }
 
   .header {
-    margin-bottom: 33px;
+    margin-bottom: 32px;
   }
 
   .logo {
@@ -1129,7 +1137,7 @@ footer {
 
 @media (max-width: 375px) {
   .header {
-    margin-bottom: 26px;
+    margin-bottom: 24px;
   }
 
   .logo {
