--- a/styles.css
+++ b/styles.css
@@ -183,7 +183,7 @@ body {
   }
 }
 
-/* .product__title {
+.product__title {
   text-align: center;
   font: 22px/21px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   margin-bottom: 20px;
@@ -250,7 +250,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 8px;
+  padding-top: 7px;
 }
 
 .choice {
@@ -309,46 +309,76 @@ body {
 .tree {
   display: flex;
   justify-content: space-between;
-  background: #000;
-  margin-bottom: 82px;
+  align-items: center;
+  height: 494px;
+  background-color: #000;
+  border: dashed 1px red;
 }
 
-.tree__video {
-  padding: 65px 18px 63px 32px;
-  width: 63%;
+.tree-box {
+  position: relative;
+  width: 664px;
+  height: 360px;
+  margin-top: 0px;
+  margin-left: 30px;
+  border: dashed 1px blue;
 }
 
+.tree-box__video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.tree-box__button {
+  position: relative;
+  z-index: 1;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.2s;
+  margin-top: 156px;
+  margin-left: 300px;
+}
+
+.tree-box__button:hover {
+  transform: scale(1.5);
+}
+
+.tree-box__button-img {
+  align-items: center;
+}
 .tree-text {
-  height: 40%;
-  width: 28%;
-  margin-top: 132px;
-  margin-right: 30px;
-  padding-left: 25px;
+  width: 35%;
+  height: 190px;
+  border: dashed 1px red;
 }
 
 .tree-text__title {
   font: 22px/27px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   color: #fff;
-  margin-top: 20px;
-  margin-bottom: 15px;
+  margin: 0px 30px 5px 40px;
+
 }
 
 .tree-text__subtitle {
   font: 14px/17px 'Gotham Pro Light', Arial, Helvetica, Sans-serif;
   color: #fff;
-  padding-right: 10px;
-  margin-bottom: 20px;
-  margin-top: 0;
+  margin: 15px 40px 20px 40px;
+
 }
 
 .tree-text__button {
   font: 12px/12px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
   color: #fff;
   text-decoration: none;
+  margin-left: 40px;
   margin-right: 10px;
+
 }
 
-.srories-wrapper {
+/*.srories-wrapper {
   display: flex;
   justify-content: space-between;
   margin-bottom: 69px;
@@ -700,7 +730,6 @@ footer {
     font: 12px/11.5px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
   }
 
-/*
   .product-card__img-1,
   .product-card__img-2,
   .product-card__img-3,
@@ -789,7 +818,7 @@ footer {
     margin-right: 14px;
   }
 
-  .stories__title {
+  /*.stories__title {
     margin-bottom: 44px;
   }
 
@@ -967,17 +996,11 @@ footer {
     font: 30px/29px 'Gotham Pro Medium', Arial, Helvetica, Sans-serif;
   }
 
-  /*.menu__item_sing {
-    width: 190px;
-  }*/
-
   .menu__item_img,
   .menu__item_flag,
   .menu__item_search {
     display: none;
   }
-
-
 
   #menu__toggle:checked ~ .menu__btn > span {
     transform: rotate(45deg);
@@ -1064,7 +1087,7 @@ footer {
     top: 3px;
     right: -2px;
   }
-/*
+
   .product__title {
     font: 30px/29px 'Gotham Pro Bold', Arial, Helvetica, Sans-serif;
     margin-bottom: 20px;
@@ -1130,7 +1153,7 @@ footer {
     width: 20px;
     height: 20px;
   }
-*/
+
 }
 
 @media (max-width: 375px) {
